Fix overflow

--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ ol {
   resize: none;
   outline: none;
   text-align: left;
-  overflow: scroll;
+  overflow: auto;
   height: 100vh;
 }
 
